Resolved issue with paging buttons not aligning correctly

--- a/searx-instance/theme/src/sass/light/search.sass
+++ b/searx-instance/theme/src/sass/light/search.sass
@@ -65,10 +65,6 @@ main#search_content
     grid-row: 7/8
     justify-content: center
 
-    .pull-left, .pull-right
-      margin-left: 0
-      margin-right: 0
-
     @include mobile()
       grid-row: 3/4
 
