--- a/searx-instance/theme/src/sass/light/search/paging.sass
+++ b/searx-instance/theme/src/sass/light/search/paging.sass
@@ -1,6 +1,6 @@
 #section__results__paging
   display: inline-flex
-  justify-content: space-between
+  justify-content: space-between !important
   .pull-right:only-child
     margin-left: auto
   .pull-left:only-child
